--- a/slides/index.html
+++ b/slides/index.html
@@ -50,9 +50,12 @@
       <section data-markdown="content/leasing01Latency.md" data-separator="^{section}" data-separator-vertical="^{subsection}" data-separator-notes="^{note}"></section>
       <section data-markdown="content/leasing02Pricing.md" data-separator="^{section}" data-separator-vertical="^{subsection}" data-separator-notes="^{note}"></section>
       <section data-markdown="content/logistics.md" data-separator="^{section}" data-separator-vertical="^{subsection}" data-separator-notes="^{note}"></section>
+      <section data-markdown="content/legacy.md" data-separator="^{section}" data-separator-vertical="^{subsection}" data-separator-notes="^{note}"></section>
       <section data-markdown="content/legacy.integration.madness.md" data-separator="^{section}" data-separator-vertical="^{subsection}" data-separator-notes="^{note}"></section>
+      <section data-markdown="content/networksneverfails.md" data-separator="^{section}" data-separator-vertical="^{subsection}" data-separator-notes="^{note}"></section>
+      <section data-markdown="content/filemq.md" data-separator="^{section}" data-separator-vertical="^{subsection}" data-separator-notes="^{note}"></section>
 
-      <section>Slide 2</section>
+
     </div>
   </div>
 
@@ -123,7 +126,7 @@
         // Opens links in an iframe preview overlay
         previewLinks: false,
         // Transition style
-        transition: 'default', // none/fade/slide/convex/concave/zoom
+        transition: 'none', // none/fade/slide/convex/concave/zoom
         // Transition speed
         transitionSpeed: 'default', // default/fast/slow
         // Transition style for full page slide backgrounds
